(lang dune 2.8)
(name gpiod)
(license BSD)
(generate_opam_files true)
(authors "Blake Loring")
(package
  (name gpiod)
  (synopsis "A wrapper around the C libgpiod library for GPIO on recent (>4.8) Linux kernels")
  (authors "Blake Loring")
  (maintainers "Blake Loring <blake@parsed.uk>")
  (homepage "https://github.com/jawline/ocamlGpiod/")
  (bug_reports "https://github.com/jawline/ocamlGpiod/")
  (version 0.3)
)
