(library
 (name gpiod)
 (public_name gpiod)
 (foreign_stubs
  (language c)
  (names gpiod_stubs))
 (c_library_flags :standard -lgpiod)
 (modules)
 (libraries base stdio))

(executable
 (name test_pi)
 (modules test_pi gpiod)
 (libraries gpiod))

(executable
 (name generator)
 (libraries core re)
 (modules generator))
