(rule
 (targets gpiod_stubs.ml gpiod_bindings.ml)
 (deps
  (:stubgen ../stubs/stubs.exe))
 (action
  (progn
  (with-stdout-to "gpiod_stubs.ml" (run %{stubgen} -ml))
  (copy ../bindings/gpiod_bindings.ml gpiod_bindings.ml)
  )
 )
)

(library
 (name gpiod)
 (public_name gpiod)
 (libraries ctypes)
 (modules gpiod gpiod_bindings gpiod_stubs))
